# minimumtimefordeliveryproject

./: CMakeCache.txt  CMakeLists.txt  DeliveryManager.cpp  DeliveryManager.h  LICENSE  Location.cpp  Location.h  Makefile  README.md  cmake_install.cmake  main  main.cpp
test/: CMakeLists.txt  test.cpp
